--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quantum-stories",
   "version": "1.0.1",
   "description": "A JavaScript module for creating a story carousel.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
