--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pereiraisaiah21/Quantum-Stories.git"
+    "url": "https://github.com/pereiraisaiah21/Quantum-Stories.git"
   },
   "author": "Pereiraisaiah21",
   "license": "ISC",
